--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>The Meow Zone</title>
-<!-- Title can change, this is temp. --->
+<!-- Title can change, this is temp. -->
 </head>
 <style>
 *{
